--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "handlebars": "^4.7.7",
     "mysql2": "^3.2.1",
     "sequelize": "^6.31.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
