--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.7.7",
     "mysql2": "^3.2.1",
     "sequelize": "^6.31.0",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.0.4"
   }
 }
