--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "handlebars": "^4.7.7",
+    "express-handlebars": "^5.2.0",
     "mysql2": "^3.2.1",
     "sequelize": "^6.31.0",
     "bcrypt": "^5.0.1",
