--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.0.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^5.3.5",
     "express-session": "^1.17.3",
-    "express-handlebars": "^5.2.0",
     "mysql2": "^3.2.1",
-    "sequelize": "^6.31.0",
-    "bcrypt": "^5.0.1",
-    "connect-session-sequelize": "^7.0.4"
+    "sequelize": "^6.31.0"
   }
 }
